--- a/new/index.html
+++ b/new/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" href="../nxtTrendzCartFeatures/new/index.css" />
+    <link rel="stylesheet" href="../new/index.css" />
   </head>
   <body>
     <section class="hero is-primary is-bold">
@@ -24,7 +24,7 @@
         </div>
       </div>
 
-      <!-- <div class="field">
+  
         <label class="label">Last Name</label>
         <div class="control">
           <input
@@ -34,7 +34,7 @@
             name="Last Name"
           />
         </div>
-      </div> -->
+      </div> 
 
       <div class="field">
         <label class="label">Email</label>
